--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hello",
   "version": "0.1.0",
   "private": true,
-  "homepage": "n2-square.com",
+  "homepage": "https://n2-square.com",
   "dependencies": {
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -13,7 +13,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "node --version"
   },
   "eslintConfig": {
     "extends": "react-app"
